deploy/openshift/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdm-qa-worker
  namespace: qualidade-automation-tdm-qa
  labels:
    app: tdm-qa
    component: worker
spec:
  replicas: 1
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
  selector:
    matchLabels:
      app: tdm-qa
      component: worker
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: tdm-qa
        component: worker
    spec:
      serviceAccountName: automacaoqa
      containers:
        - name: worker
          image: image-registry.openshift-image-registry.svc:5000/qualidade-automation-tdm-qa/tdm-qa:latest
          imagePullPolicy: Always
          command:
            - node
            - server/worker.js
          volumeMounts:
            - name: run-logs
              mountPath: /app/logs
          resources:
            requests:
              cpu: 200m
              memory: 384Mi
            limits:
              cpu: 500m
              memory: 768Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      volumes:
        - name: run-logs
          emptyDir: {}
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
