deploy/openshift/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdm-qa-api
  namespace: qualidade-automation-tdm-qa
  labels:
    app: tdm-qa
    component: api
spec:
  replicas: 1
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
  selector:
    matchLabels:
      app: tdm-qa
      component: api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: tdm-qa
        component: api
    spec:
      serviceAccountName: automacaoqa
      containers:
        - name: api
          image: image-registry.openshift-image-registry.svc:5000/qualidade-automation-tdm-qa/tdm-qa:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3333
              name: http
              protocol: TCP
          volumeMounts:
            - name: run-logs
              mountPath: /app/logs
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 1
            failureThreshold: 3
          resources:
            requests:
              cpu: 200m
              memory: 384Mi
            limits:
              cpu: 500m
              memory: 768Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      volumes:
        - name: run-logs
          emptyDir: {}
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
---
apiVersion: v1
kind: Service
metadata:
  name: tdm-qa-api
  namespace: qualidade-automation-tdm-qa
  labels:
    app: tdm-qa
    component: api
spec:
  selector:
    app: tdm-qa
    component: api
  ports:
    - name: http
      port: 3333
      targetPort: 3333
